--- a/app/src/main/res/layout/content_home.xml
+++ b/app/src/main/res/layout/content_home.xml
@@ -26,16 +26,17 @@
                 <TableRow
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
+
                     <TextView
                         android:id="@+id/id"
-                        android:layout_width="62dp"
+                        android:layout_width="35dp"
                         android:padding="5dip"
                         android:text="ID" />
 
 
                     <TextView
                         android:id="@+id/name"
-                        android:layout_width="62dp"
+                        android:layout_width="74dp"
                         android:padding="5dip"
                         android:text="Name" />
 
@@ -55,14 +56,14 @@
                         android:id="@+id/ON"
                         android:layout_width="wrap_content"
                         android:padding="5dip"
-                        android:text="Time to ON" />
+                        android:text="ON Time" />
 
                     <TextView
                         android:id="@+id/OFF"
                         android:layout_width="104dp"
                         android:layout_height="match_parent"
                         android:padding="5dip"
-                        android:text="Time to OFF" />
+                        android:text="OFF Time" />
 
                 </TableRow>
 
